# tyuiu-education-metrics

./: .env  pyproject.toml  requirements.txt
src/: config.py
src/etl/: processor.py
src/yandex/: client.py  geocoder.py  schemas.py
